<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Millionaire Game</string>
    <string name="select_a_theme">Select a theme</string>
    <string name="new_game">New Game</string>
    <string name="leaderboard"><u>Leaderboard</u></string>
    <string name="exit_game">Exit Game</string>
    <string name="settings">Settings</string>
    <string name="sound_on">Sound</string>
    <string name="game_mode">Game mode</string>
    <string name="taptic">Vibration</string>
    <string name="simple">Simple</string>
    <string name="no_thanks"><u>No Thanks</u></string>
    <string name="language">Language</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="timed">Timed</string>
    <string name="credits">Credits</string>
    <string name="default_theme">Default</string>
    <string name="theme_1">Theme 1</string>
    <string name="theme_2">Theme 2</string>
    <string name="theme_3">Theme 3</string>
    <string name="language_">English</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>
    <string name="arabic">Arabic</string>
    <string name="hindi">Hindi</string>
    <string name="urdu">Urdu</string>
    <string name="german">German</string>
    <string name="japanese">Japanese</string>
    <string name="turkish">Turkish</string>
    <string name="indonesian">Indonesia</string>
    <string name="malay">Malay</string>
    <string name="thai">Thai</string>
    <string name="korean">Korean</string>
    <string name="chinese">Chinese</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
    <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
    <string name="rewarded_ad_unit_id">ca-app-pub-4696224049420135/7768937909</string>
    <string name="ad_copy">I just won 000 in the millionaire game. I invite you to play the awesome and exciting millionaire game to improve your knowledge.
\n\nBeat me if you can !!!
       \n111
    </string>
    <string name="ad_copy2">My username is usernamevariable I invite you to play the awesome and exciting millionaire game to improve your knowledge.
\n\nBeat me if you can !!!
       \n111
    </string>
    <string name="play">PLAY</string>
    <string name="see_your_ranking">See your ranking</string>
    <string name="goto_youtube"><u>Learn Digital Skills</u></string>
    <string name="won">Congratulations you won</string>
    <string name="more_games"><u>Join Our Community</u></string>
    <string name="more_games2">More Games</string>
    <string name="reach_us_on_facebook"><u>@Digitaldreamsng</u></string>
    <string name="call_us"><u>09064660137</u></string>
    <string name="send_us_an_email"><u>info@digitaldreamsng.com</u></string>
    <string name="twitter"><u>@DigitalDreamsNG</u></string>
    <string name="get_ready">Get Ready!</string>
    <string name="you_won">Score</string>
    <string name="next">Next Level</string>
    <string name="winner">Winner</string>
    <string name="home">Home</string>
    <string name="winning_congrats">Congratulations!</string>
    <string name="next_level">Stage Completed</string>
    <string name="can_you_beat_that">You can beat this score!</string>
    <string name="share">Share</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Quit</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_take_500_and_leave_the_game">
        Quitters never win. Do not quit, continue to win
    </string>
    <string name="take_money">Exit Game</string>
    <string name="continue_">Continue</string>
    <string name="take">Take</string>
    <string name="replay_level">Replay Level</string>
    <string name="watch_a_video">Retain your score</string>
    <string name="post_url">https://www.ddgames.net/api/post</string>
    <string name="hard_level">Next Level</string>
    <string name="failure_text">Failing does not mean you are a failure</string>
    <string name="play_again"><u>Play Again</u></string>
    <string name="view_ranking"><u>View Ranking</u></string>
    <string name="view_history"><u>View Answers</u></string>
    <string name="count_down_amount">1000000</string>
    <string name="count_down_level">Level</string>
    <string name="play_history">Play History</string>
    <string name="give_up"><u>Give up</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anonymous_user">Anonymous user</string>
    <string name="readmore">Read More</string>
    <string name="loading_image">Loading image</string>
    <string name="please_wait">Please wait…</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="you_missed_the_correct_answer">You missed the correct answer</string>
    <string name="continue_by_watching_ad">Continue by watching Ad</string>
    <string name="minus_2_questions">Minus 2 Questions</string>
    <string name="ask_computer">Ask Computer</string>
    <string name="take_a_poll">Take a Poll</string>
    <string name="reset_question">Reset Question</string>
    <string name="maybe_its">Maybe it\'s</string>
    <string name="all_time">All Time</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="country">Country</string>
    <string name="leaderboard_is_not_available">Leaderboard is not available</string>
    <string name="meet_our_team">Meet our Team:</string>
    <string name="contact_us">Contact Us</string>
    <string name="view_answers">View Answers</string>
    <string name="reason">Reason:</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="best_score">Best Score</string>
    <string name="position_this_week">position this week</string>
    <string name="you_are_at">You are at:</string>
    <string name="beat_score">beat score</string>
    <string name="position_today">position today</string>
    <string name="congratulations_improve_your_score_to_remain_at_the_top">Congratulations! improve your score to remain at the top - $</string>
    <string name="beat_this_weeks_highest_score">Beat this weeks highest score - $</string>
    <string name="beat_today_s_highest_score_of">Beat today\'s highest score of - $</string>
    <string name="beat_today_s_highest_score">Beat today\'s highest score - $</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="accuracy">% Accuracy</string>
    <string name="questions_answered">questions answered</string>
    <string name="question_answered">question answered</string>
    <string name="create_your_player_profile">Create your player profile</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="select_country">Select country</string>
    <string name="select_your_country">Select your Country</string>
    <string name="create_player_name">Create player name</string>
    <string name="player_name_can_t_be_empty">Player name can\'t be empty</string>
    <string name="search">Search…</string>
    <string name="permission_denied">Permission denied</string>
    <string name="web_development">Web Development</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="digital_marketing">Digital Marketing</string>
    <string name="data_science">Data Science</string>
    <string name="we_train_you_on">We train you on:</string>
    <string name="correct_answers">correct answers</string>
    <string name="wrong_answers">wrong answers</string>
    <string name="session_score">Session Score</string>
    <string name="select_a_language">Select a Language</string>
    <string name="_2">-2</string>
    <string name="no_internet">Oop! something went wrong. Please check your internet connection and try again.</string>
    <string name="i_don_t_know">I don\'t know.</string>
    <string name="you_could_try">You could try</string>
    <string name="i_guess_it_s">I guess it\'s</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="d_hours_02d_minutes_02d_seconds">%d hours %02d minutes %02d seconds</string>
    <string name="d_minutes_02d_seconds">%d minutes %02d seconds</string>
    <string name="d_seconds">%d seconds</string>
    <string name="_0_second">0 second</string>
    <string name="chukwudi_edoga">Chukwudi Edoga</string>
    <string name="clinton_onuigbo">Clinton Onuigbo</string>
    <string name="dike_kingsley_oneh">Dike Kingsley Oneh</string>
    <string name="ubesie_kenechukwu">Ubesie Kenechukwu</string>
    <string name="vincent_sunday">Vincent Sunday</string>
    <string name="toochukwu_dennis">Toochukwu Dennis</string>
    <string name="amos_lucky_chibueze">Amos Lucky Chibueze</string>
    <string name="next_question">Next</string>
    <string name="_15">15</string>
    <string name="get_url">https://www.ddgames.net/api/get</string>
</resources>