<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_color"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <LinearLayout
            android:id="@+id/exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_outline_cancel_24" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/fjalla_one"
            android:gravity="center"
            android:text="@string/you_missed_the_correct_answer"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/continue_by_watching_ad"
            android:textColor="@color/blue_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/continue_game"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/hex_green"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/vicon2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/give_up"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ic_hexnow"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/give_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>