<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootview"
    tools:context=".LeaderBoard">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/share_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/hexagon"
                app:tint="@color/basic_color" />

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_share_white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/leaderboard"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <RelativeLayout
            android:id="@+id/close_container"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/hexagon"
                app:tint="@color/basic_color" />
            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_close_24"/>

        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/blue_gray"
                android:alpha="0.5"
                android:orientation="horizontal">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/all"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/basic_color"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_time"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/arimo"/>

                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/white"/>
                <LinearLayout
                    android:id="@+id/week"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weekly"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/arimo"/>

                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/white"/>
                <LinearLayout
                    android:id="@+id/daily"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daily"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/arimo"/>

                </LinearLayout>
                <!--          country Leaderboard -->

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/country"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/arimo"/>

                </LinearLayout>
                <!--          END OF country Leaderboard -->


            </LinearLayout>
        </RelativeLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            >
            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_marginBottom="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard_is_not_available"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/arimo"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="FULL_BANNER"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/banner_ad_unit">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>