<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"

            >

            <RelativeLayout
                android:id="@+id/close_dialog"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/hexagon"
                    app:tint="@color/white" />

                <ImageView

                    android:id="@+id/close"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_close_24"
                    app:tint="@color/black" />
            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:fontFamily="@font/fjalla_one"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <!--        <LinearLayout-->
        <!--            android:orientation="vertical"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:id="@+id/ad_container">-->
        <!--            <com.google.android.gms.ads.AdView-->
        <!--                xmlns:ads="http://schemas.android.com/apk/res-auto"-->
        <!--                android:id="@+id/adView"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                ads:adSize="MEDIUM_RECTANGLE"-->
        <!--                ads:adUnitId="@string/banner_adunit">-->
        <!--            </com.google.android.gms.ads.AdView>-->
        <!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/yes"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/opt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/hex_green"

                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>