<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".alpha.ExplanationBottomSheetDialog">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@color/basic_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_toStartOf="@id/close_dialog"
                android:fontFamily="@font/arizonia"
                android:text="@string/correct_answer"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/close_dialog"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/hexagon" />

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_close_24"
                    app:tint="@color/black" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/basic_color"
            android:paddingHorizontal="10dp">

            <RelativeLayout
                android:id="@+id/view_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/hex_green2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/hexagon" />

                        <TextView
                            android:id="@+id/label_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/basic_color"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingTop="20dp">


            <TextView
                android:id="@+id/reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arimo"
                android:lineSpacingMultiplier="1.36"
                android:text="In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/read_more"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/ic_hexnow"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/readmore"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/basic_color" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>